2008-12-11  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.26.modules: remove duplicate intltool dep
	for libwnck

2008-12-11  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.26.modules: update gnome-session
	dependencies (no more libgnomeui, gnome-keyring, gnome-control-center,
	but added libglade)

2008-12-08  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/versioncontrol/bzr.py:
	Update jhbuild Bazaar support for tags and branches. (closes: #563658)

	* modulesets/gtk.modules:
	* modulesets/gnome-2.16.modules:
	* modulesets/gnome-2.18.modules:
	* modulesets/online-desktop.modules:
	* modulesets/gnome-suites-2.20.modules:
	* modulesets/gnome-suites-2.22.modules:
	* modulesets/gnome-suites-2.24.modules:
	* modulesets/gnome-suites-2.26.modules:
	* modulesets/gnome-2.20.modules:
	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules:
	Update the mirror definitions to take advantage of this.

2008-12-08  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules:
	* modulesets/gnome-suites-2.24.modules:
	* modulesets/gnome-suites-2.26.modules: fixed markup for dependency of
	gnome-python-desktop on nautilus.

2008-12-08  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py, tests/tests.py: do not assume after/suggests
	modules have a relationship of after/suggests with their dependencies.
	nautilus after tracker, nautilus-cd-burner depends on nautilus, tracker
	depends on nautilus-cd-burner, the <after> would be evaluated first and
	would transform the dependency of nautilus-cd-burner into an <after>,
	ignoring it as it would cycle, causing nautilus-cd-burner to be built
	before nautilus.  (closes: #563597)

2008-12-08  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py, tests/tests.py: do not let <after> introduce
	new dependencies unless explicitely pointing to a <metamodule>.
	(closes: #563597)

2008-12-06  Frederic Peters  <fpeters@0d.be>
