@@ -1,3 +1,10 @@
+2008-12-11  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/buildbot/factory.py, jhbuild/commands/base.py,
+	jhbuild/commands/bot.py, jhbuild/frontends/buildscript.py: added a new
+	cleanone command, called from buildbot, so local buildslave settings
+	(makeclean = False) are used.
+
 2008-12-11  Vincent Untz  <vuntz@gnome.org>
 
 	* modulesets/gnome-suites-2.26.modules: remove duplicate intltool dep
